# GitBotAI-2.0

./: .env  .replit  README.md  pyproject.toml  readme.md  replit_instructions.md  requirements.txt  shared_dependencies.md  techstack.md  techstack.yml
backend/: github_api.py  message_passing.py  server.py
frontend/: conversational_interface.html  styles.css  user_interface.html
workflow/: backend_github_interaction.py  frontend_backend_communication.py  interaction.py  response_feedback.py  user_installation.py
