[tool.poetry]
name = "repl_nix_GitBotAI-20-1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask-Cors = "^4.0.0"
marshmallow = "^3.20.1"
PyGithub = "^1.59.1"
requests = "^2.31.0"
Flask = "^2.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
